--- a/templates/conventions/recapitulatif/financement.html
+++ b/templates/conventions/recapitulatif/financement.html
@@ -14,7 +14,7 @@
                         </div>
                         {% include "conventions/actions/goto.html" %}
                     </div>
-                    <p class="fr-my-1w">Prêts & Subventions : </p>
+                    <p class="fr-my-1w">Prêts et Subventions : </p>
                     {% if convention.prets.all %}
                         <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                             <table  aria-label="Prêts">
@@ -22,7 +22,7 @@
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
-                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
+                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Subventions' callback_click="refresh_opened_comments" %}
                                         {% endif %}
                                         <th scope="col">Numéro</th>
                                         <th scope="col">Date d'octroi</th>
