--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -107,6 +107,7 @@
                         </div>
                     {% endif %}
                     {% include "common/display_field_if_exists.html" with label="loyer dérogatoire" value=lot.loyer_derogatoire object_field="lot__loyer_derogatoire__"|add:lot_uuid %}
+                    {% include "common/display_field_if_exists.html" with label="Surface des locaux collectifs résidentiels" value=lot.surface_locaux_collectifs_residentiels object_field="lot__surface_locaux_collectifs_residentiels__"|add:lot_uuid %}
                     {% include "common/display_field_if_exists.html" with label="Nombre de logements à louer en plus à des ménages dont les ressources n'excèdent pas le plafond" value=lot.lgts_mixite_sociale_negocies object_field="lot__lgts_mixite_sociale_negocies__"|add:lot_uuid %}
 
                 </div>
