--- a/templates/conventions/common/form_foyer_residence_logements.html
+++ b/templates/conventions/common/form_foyer_residence_logements.html
@@ -3,8 +3,10 @@
 {% load custom_filters %}
 
 <div class="fr-grid-row fr-grid-row--gutters">
-    <div class="fr-col-md-12">
-
+    <div class="fr-col-12 fr-mb-2w">
+        {% include "common/form/input_number.html" with display_inline=True form_input=form.nb_logements object_field="lot__nb_logements__"|add:form.uuid.value %}
+    </div>
+    <div class="fr-col-12">
         <h4>Logements associés à la convention</h4>
         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
             {% include "common/form/download_upload_form.html" with file_type='foyer_residence_logements' upform=upform what='logements'%}
