--- a/templates/500.html
+++ b/templates/500.html
@@ -9,7 +9,7 @@
                         Une erreur est survenue. Nous vous prions de nous excuser.
                     </p>
                     {{ specific_error|safe }}
-                    {% if not CERBERE_AUTH %}
+                    {% if CERBERE_AUTH %}
                         <a class="fr-btn fr-btn--secondary fr-mb-3w" value="Retour à l'accueil" href="https://siap.logement.gouv.fr/tableau-bord">Retourner au tableau de bord</a>
                     {% endif %}
                     <p class="fr-mb-3w">
