--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -19,7 +19,7 @@
                     </div>
                     {% if logements %}
                         <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                            <table  aria-label="Logements">
+                            <table aria-label="Logements">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
@@ -108,7 +108,7 @@
                             {% if repartition_surfaces %}
                                 <p class="fr-my-2w notes"><em>Cependant, vous avez déclaré depuis Ecoloweb la répartition des logement suivante:</em></p>
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                                    <table>
+                                    <table aria-label="Répartion des logements par surface">
                                         <thead>
                                             <tr>
                                                 <th scope="col" class="col__width--150"></th>
