Add table aria-label

--- a/templates/conventions/journal.html
+++ b/templates/conventions/journal.html
@@ -11,7 +11,7 @@
 
         <div class="fr-container fr-my-6w">
             <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                <table>
+                <table aria-label="Journal de bord">
                     <thead>
                         <tr>
                             <th scope="col" class="col__width--100">Date</th>
