--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -33,16 +33,17 @@
                                 <p>Les infomations dans ce cadre sont attachées à l'entreprise bailleur,
                                     les modifications seront donc reportées sur toutes les conventions en
                                     projet ou en cours d'instruction appartenant à ce bailleur.</p>
-                                {% if upform.bailleur.field.choices|length > 1 %}
-                                    <details>
+                                {% if upform.bailleur.field.choices|length > 1 or upform.errors %}
+                                    <details {% if upform.errors %}open{% endif %}>
                                         <summary>
                                             <span class="fr-link">Vous pouvez aussi demander une modification du bailleur de l'opération de la convention en cliquant sur ce lien</span>
                                         </summary>
                                         <div>
                                             {% csrf_token %}
+                                            {{ upform.bailleur.field.queryset }}
                                             {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
                                                 {% url 'users:search_bailleur' as search_bailleur_url %}
-                                                {% include "common/form/input_search_select.html" with form_input=upform.bailleur queryset=upform.bailleur.field.queryset field=upform.bailleur.field.to_field_name url=search_bailleur_url %}
+                                                {% include "common/form/input_search_select.html" with form_input=upform.bailleur url=search_bailleur_url %}
                                             {% endwith %}
                                             <button class="fr-btn" name="update_bailleur" value="True">
                                                 Changer le bailleur de la convention et de son opération
