--- a/templates/settings/add_user.html
+++ b/templates/settings/add_user.html
@@ -69,7 +69,7 @@
                                 </div>
                                 <div id="select_bailleur" {% if form.user_type.value != 'BAILLEUR' %} hidden {% endif %}>
                                     {% url 'users:search_bailleur' as search_bailleur_url %}
-                                    {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.to_field_name url=search_bailleur_url %}
+                                    {% include "common/form/input_search_select.html" with form_input=form.bailleur   url=search_bailleur_url %}
                                 </div>
                             {% else %}
                                 {% if request|is_bailleur %}
@@ -79,7 +79,7 @@
                                         name="{{form.user_type.html_name}}"
                                         value="BAILLEUR">
                                     {% url 'users:search_bailleur' as search_bailleur_url %}
-                                    {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.to_field_name url=search_bailleur_url %}
+                                    {% include "common/form/input_search_select.html" with form_input=form.bailleur   url=search_bailleur_url %}
                                 {% endif %}
                                 {% if request|is_instructeur %}
                                     <input
