--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -19,7 +19,7 @@
                     </div>
                     {% if logements %}
                         <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                            <table  aria-label="Logements">
+                            <table aria-label="Logements">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
@@ -103,7 +103,39 @@
                     {% else %}
                         <div class="fr-my-2w">
                             <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucun logement.</em></p>
-                            <a class="fr-mb-1w fr-link" href="{% url target_url convention_uuid=convention.uuid %}">Ajouter des logements</a>
+                            <a class="fr-my-1w fr-link" href="{% url target_url convention_uuid=convention.uuid %}">Ajouter des logements</a>
+
+                            {% if repartition_surfaces %}
+                                <p class="fr-my-2w notes"><em>Cependant, vous avez déclaré depuis Ecoloweb la répartition des logement suivante:</em></p>
+                                <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                                    <table aria-label="Répartion des logements par surface">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col" class="col__width--150"></th>
+                                                {% for type_habitat, typologies in repartition_surfaces.items %}
+                                                    {% if forloop.counter == 1 %}
+                                                        {% for typologie, _ in typologies.items %}
+                                                            <th scope="col" class="col__width--100">
+                                                                {{ typologie }}
+                                                            </th>
+                                                        {% endfor %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for type_habitat, typologies in repartition_surfaces.items %}
+                                                <tr>
+                                                    <td class="fr-text--lg">{{ type_habitat|title }}</td>
+                                                    {% for typologie, quantite in typologies.items %}
+                                                        <td class="fr-text--lg">{% if quantite %}{{ quantite }}{% endif %}</td>
+                                                    {% endfor %}
+                                                </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            {% endif %}
                         </div>
                     {% endif %}
                     {% include "common/display_field_if_exists.html" with label="loyer dérogatoire" value=lot.loyer_derogatoire object_field="lot__loyer_derogatoire__"|add:lot_uuid %}
