Sometimes, the footer which limit the line is not displayed

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -64,7 +64,7 @@
     </div>
 {% endif %}
 <div class="fr-container-fluid ds_banner">
-    <div class="fr-container fr-px-3w">
+    <div class="fr-container fr-px-3w fr-mb-3w">
         <div class="fr-grid-row fr-grid-row--gutters fr-card fr-card--no-border">
             <div class="fr-col-md-12">
                 <details class="apilos-order-menu">
