Add missing with args to recap templates when looking at avenant

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -33,13 +33,13 @@
                 {% endif %}
                 {% if convention.is_avenant %}
                     {% if 'bailleur' in avenant_list %}
-                        {% include "conventions/recapitulatif/bailleur.html" with target_url='conventions:avenant_bailleur' %}
+                        {% include "conventions/recapitulatif/bailleur.html" with target_url='conventions:avenant_bailleur' bailleur=convention.bailleur %}
                     {% endif %}
                     {% if 'logements' in avenant_list %}
-                        {% include "conventions/recapitulatif/foyer_residence_logements.html" with target_url='conventions:avenant_foyer_residence_logements' %}
-                        {% include "conventions/recapitulatif/collectif.html" with target_url='conventions:avenant_collectif' %}
-                        {% include "conventions/recapitulatif/logements.html" with target_url='conventions:avenant_logements' %}
-                        {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:avenant_annexes' %}
+                        {% include "conventions/recapitulatif/foyer_residence_logements.html" with target_url='conventions:avenant_foyer_residence_logements' lot=convention.lot logements=convention.lot.logements.all %}
+                        {% include "conventions/recapitulatif/collectif.html" with target_url='conventions:avenant_collectif' lot=convention.lot %}
+                        {% include "conventions/recapitulatif/logements.html" with target_url='conventions:avenant_logements' lot=convention.lot logements=convention.lot.logements.all %}
+                        {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:avenant_annexes' annexes=convention.lot.annexes.all lot=convention.lot %}
                     {% endif %}
                     {% if 'duree' in avenant_list %}
                         {% include "conventions/recapitulatif/financement.html" with target_url='conventions:avenant_financement' %}
