--- a/templates/conventions/recapitulatif/operation.html
+++ b/templates/conventions/recapitulatif/operation.html
@@ -18,7 +18,22 @@
                         {% endif %}
                     </div>
                     <div class="table--limited-height">
-                        <strong>{% include "common/display_field_if_exists.html" with label="Numéro de décision" value=programme.numero_galion %}</strong>
+
+                        {% if request.user.is_instructeur %}
+                            <p class="fr-mt-1w fr-mb-0">
+                                {% if programme.numero_galion %}
+                                    <strong>Numéro de décision : {{programme.numero_galion}}</strong>
+                                {% else %}
+                                    <em>Numéro de décision : non renseigné</em>
+                                {% endif %}
+                            </p>
+                            <button class="fr-link fr-text--xs" data-fr-opened="false" type="button" aria-controls="fr-modal-update-programme-number">
+                                editer le numéro de décision
+                            </button>
+                        {% else %}
+                            {% include "common/display_field_if_exists.html" with label="Numéro de décision" value=programme.numero_galion %}
+                        {% endif %}
+
                         {% include "common/display_field_if_exists.html" with label="Nom" value=programme.nom object_field="programme__nom__"|add:programme_uuid %}
                         {% include "common/display_field_if_exists.html" with label="Adresse" value=programme.adresse object_field="programme__adresse__"|add:programme_uuid %}
                         {% include "common/display_field_if_exists.html" with label="Code postal" value=programme.code_postal object_field="programme__code_postal__"|add:programme_uuid %}
@@ -89,4 +104,50 @@
             </div>
         </div>
     </div>
+
+
+    {% if programmeNumberForm.errors %}
+        <input data-fr-opened="true" aria-controls="fr-modal-update-programme-number" type="hidden">
+    {% endif %}
+
+    <dialog aria-labelledby="fr-modal-update-programme-number-title" id="fr-modal-update-programme-number" data-fr-opened="true" class="fr-modal" role="dialog" open="true">
+        <div class="fr-container fr-container--fluid fr-container-md">
+            <div class="fr-grid-row fr-grid-row--center">
+                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                    <div class="fr-modal__body">
+                        <div class="fr-modal__header">
+                            <button class="fr-link--close fr-link" type="button" aria-controls="fr-modal-update-programme-number">Fermer</button>
+                        </div>
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="fr-modal__content">
+                                <div role="alert" class="fr-alert fr-alert--warning">
+                                    <p class="fr-alert__title">Modifier le numéro de décision</p>
+                                    <p>la modification de ce numéro de décision peut avoir des conséquences sur le lien avec les dossiers de financement</p>
+                                </div>
+                                {% include "common/form/input_text.html" with form_input=programmeNumberForm.numero_galion editable=True%}
+
+                            </div>
+                            <div class="fr-modal__footer">
+                                <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline fr-btns-group--inline-lg fr-btns-group--icon-left">
+                                    <li>
+                                        <button class="fr-btn fr-btn--secondary" type="button" aria-controls="fr-modal-update-programme-number">
+                                            Annuler
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="fr-btn fr-icon-checkbox-line" name='update_programme_number' value=1>
+                                            Changer le numéro de décision
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </dialog>
+
+
 {% endif %}
