--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -3,50 +3,16 @@
 {% if not siap_operation %}
     <div class="fr-container">
         <div class="fr-grid-row fr-grid-row--gutters">
-            <div class="fr-col-md-12 ">
+            <div class="fr-col-md-12 fr-mb-2w">
                 <form class="fr-mt-2w" method="get" action="" id="search_table">
                     <input type="hidden" id="order_by" name="order_by" value="{{conventions.order_by}}">
                     <input type="hidden" id="page" name="page" value="{{conventions.page}}">
+                    {# Champs de recherche spécifiques (dépend du rôle de l'utilisateur) #}
                     <div class="fr-grid-row fr-grid-row--gutters">
-                        {# Champs Statut #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="fr-select-group">
-                                <select class="fr-select" id="cstatut" name="cstatut">
-                                    <option value="">Statut</option>
-                                    {% for statut in statuts %}
-                                        <option value="{{statut.value}}"
-                                            {% if statut.value  == conventions.statut_filter %}selected{% endif %}>
-                                            {{statut.label}}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        {# Champs financement #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="fr-select-group">
-
-                                <select class="fr-select" name="financement">
-                                    <option value="">Financement</option>
-                                    {% for financement in financements %}
-                                        <option value="{{financement.value}}"
-                                            {% if financement.value  == conventions.financement_filter %}selected{% endif %}>
-                                            {{financement.label}}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-
-                        {# Champs "recherche libre" #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-5 fr-mb-2w">
-                            <input class="fr-input" placeholder="par nom, code d’opération ou ville" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}">
-                        </div>
-
                         {# Champs bailleur #}
                         {% if bailleur_query %}
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                                <div class="fr-select-group">
+                                <div class="">
                                     {% url 'users:search_bailleur' as search_bailleur_url %}
                                     <select class="fr-select" name="bailleur" id="search-field-bailleur">
                                         {% if conventions.bailleur %}
@@ -81,8 +47,8 @@
                         {# Champs administration #}
                         {% if administration_query %}
 
-                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                                <div class="fr-select-group">
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
+                                <div class="">
                                     {% url 'users:search_administration' as search_administration_url %}
                                     <select class="fr-select" name="administration" id="search-field-administration">
                                         {% if conventions.administration %}
@@ -115,33 +81,78 @@
                         {% endif %}
 
                         {# Champs commune #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
+                            <input class="fr-input" placeholder="Commune" type="text" name="commune" value="{{ conventions.departement_input }}" />
+                        </div>
+
+                        {% if request.user.is_staff %}
+
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
+                                <input class="fr-input" placeholder="Département" type="text" name="departement_input" value="{{conventions.departement_input}}" />
+                            </div>
+                        {% endif %}
+
+                    </div>
+                    {# Champs de recherche génériques (affichés à tous les utilisateurs) #}
+                    <div class="fr-grid-row fr-grid-row--gutters">
+                        {# Champs Statut #}
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="fr-select-group">
-                                <select class="fr-select" name="commune" id="search-field-commune">
+                            <div class="">
+                                <select class="fr-select" id="cstatut" name="cstatut">
+                                    <option value="">Statut</option>
+                                    {% for statut in statuts %}
+                                        <option value="{{statut.value}}"
+                                            {% if statut.value  == conventions.statut_filter %}selected{% endif %}>
+                                            {{statut.label}}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        {# Champs financement #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <div class="">
+
+                                <select class="fr-select" name="financement">
+                                    <option value="">Financement</option>
+                                    {% for financement in financements %}
+                                        <option value="{{financement.value}}"
+                                            {% if financement.value  == conventions.financement_filter %}selected{% endif %}>
+                                            {{financement.label}}
+                                        </option>
+                                    {% endfor %}
                                 </select>
                             </div>
                         </div>
 
-                        <div class="fr-col-1 fr-grid-row fr-grid-row--right">
-                            <button class="fr-btn fr-fi-search-line" title="Rechercher" id="search_btn">
-                            </button>
+                        {# Champs "Code opération / numéro de convention" #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <input class="fr-input" placeholder="{% if active %}Code d'opération{% else %}Numéro de convention{% endif %}" type="search" id="search_input" name="search_input" value="{{conventions.search_input}}" />
                         </div>
-                    </div>
-                    {% if request.user.is_staff %}
-                        <div class="apilos-bordered fr-my-3w fr-col-12 fr-col-md-12 fr-col-lg-11">
-                            <p class="notes">
-                                <em>Les paramètres de recherche dans cet encadré sont disponibles uniquement pour les utilisateurs avancés.</em>
-                            </p>
-                            <div class="fr-grid-row fr-grid-row--gutters">
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                                    <label class="fr-label" for="search_input">
-                                        Préciser un département
+
+                        {# Champs ANRU #}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
+                            <div class="fr-fieldset__element">
+                                <div class="fr-checkbox-group fr-checkbox-group--sm">
+                                    <input name="checkboxes-hint-el-sm-3" id="checkboxes-hint-el-sm-3" type="checkbox" aria-describedby="checkboxes-hint-el-sm-3-messages" data-fr-js-checkbox-actionee="true">
+                                    <label class="fr-label" for="checkboxes-hint-el-sm-3">
+                                        ANRU
+                                        <span class="fr-hint-text">N'afficher que les conventions ANRU</span>
                                     </label>
-                                    <input class="fr-input" placeholder="Ex : 13" type="recherche" name="departement_input" value="{{conventions.departement_input}}">
+                                    <div class="fr-messages-group" id="checkboxes-hint-el-sm-3-messages" aria-live="assertive">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    {% endif %}
+                    </div>
+
+                    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--right">
+                        <button class="fr-btn" id="search_btn">
+                            <span class="fr-fi-search-line fr-mr-1w" aria-hidden="true"></span>
+                            Rechercher
+                        </button>
+                    </div>
+
                 </form>
             </div>
         </div>
