--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -44,7 +44,7 @@
                                                 {% url 'users:search_bailleur' as search_bailleur_url %}
                                                 {% include "common/form/input_search_select.html" with form_input=upform.bailleur url=search_bailleur_url %}
                                             {% endwith %}
-                                            <button class="fr-btn" name="update_bailleur" value="True">
+                                            <button class="fr-btn" name="change_bailleur" value="True">
                                                 Changer le bailleur de la convention et de son opération
                                             </button>
                                         </div>
