mise à jour du texte après validation de Mathis

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -31,7 +31,7 @@
                     <img class="fr-mr-3w"  src="{% static 'icons/warning.svg' %}" alt="warning">
                     <div>
                         <p class="fr-mb-0 fr-text--lead">Le SIAP sera prochainement votre unique porte d’entrée vers APiLos !</p>
-                        <p class="fr-mb-0">Vous pourrez retrouver Apilos en vous connectant depuis le SIAP.
+                        <p class="fr-mb-0">APiLos est désormais un module integré au Système d'Information des Aides à la Pierre.
                             <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/passage-vers-le-siap/passage-au-siap" target="_blank"  rel="noopener">En savoir plus</a>
 
                         </p>
