--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 {% if convention|display_validation:request %}
-    <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
-        <div role="alert">
+    <div class="fr-col-12 fr-col-lg-6 fr-py-5w fr-pl-lg-5w apilos-or-border">
+        <div role="alert" class="fr-alert fr-alert--A_signer fr-icon-arrow-right-s-line-double h-100">
             {% if convention.is_avenant %}
                 {% include "conventions/avenant/complete_form_for_avenants.html" with form=complete_for_avenant_form %}
             {% else %}
@@ -18,11 +18,11 @@
                             {% csrf_token %}
                             <input id="numberform" type="hidden" name="numberform" value="true" disabled="disabled" />
                             <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
-                                <div class="fr-col-12 fr-col-md-6">
+                                <div class="fr-col-12">
                                     {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
                                 </div>
-                                <div class="fr-col-12 fr-col-md-6">
-                                    <button class="fr-btn fr-btn--secondary" {% if not editable_validation %}disabled{% endif %}>
+                                <div class="fr-col-12">
+                                    <button class="fr-btn" {% if not editable_validation %}disabled{% endif %}>
                                         Valider la convention
                                     </button>
                                 </div>
