add that the bailleur will be notified

--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -74,6 +74,9 @@
                     <button class="fr-btn fr-mt-2w">
                         Demander des corrections au bailleur
                     </button>
+                    <span>
+                        <em>Le bailleur sera notifié par email</em>
+                    </span>
                 {% else %}
                     <button class="fr-btn fr-mt-2w">
                         Notifier le bailleur
